chore: replace hyphen with underscore in slugs

--- a/backup_s3/config.yaml
+++ b/backup_s3/config.yaml
@@ -2,7 +2,7 @@ name: Backup S3
 version: 14.0.0
 image: alexbabel/backup-s3
 homeassistant: "2022.4"
-slug: backup-s3
+slug: backup_s3
 description: Sync your Home Assistant Supervisor Backups with S3
 url: https://github.com/AlexanderBabel/hassio-addons
 startup: once
