--- a/homepod_connect/config.yaml
+++ b/homepod_connect/config.yaml
@@ -1,6 +1,6 @@
 name: HomePod Connect
 version: 28.8-ls118
-slug: homepod-connect
+slug: homepod_connect
 description: Play Spotify music on your HomePods through Spotify Connect
 arch:
   - aarch64
